# mcp-kavach

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  llms.txt  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  audit.md  claude-plugin.md  demo-script.md  policy-packs.md  policy-schema.md  threat-model.md  vault.md
docs/assets/: demo.tape
docs/research/: 2026-06-12-landscape-and-roadmap.md  2026-06-15-universal-positioning.md  2026-06-16-llm-tool-integration.md
plugins/kavach/: README.md
plugins/kavach/.claude-plugin/: plugin.json
plugins/kavach/commands/: status.md
plugins/kavach/hooks/: hooks.json
plugins/kavach/scripts/: ensure.sh  run-hook.sh
plugins/virelia/: README.md
plugins/virelia/.claude-plugin/: plugin.json
plugins/virelia/commands/: status.md
plugins/virelia/hooks/: hooks.json
plugins/virelia/scripts/: ensure.sh  run-hook.sh
src/mcp_kavach/: __init__.py  audit.py  engine.py  models.py  pathmatch.py
src/mcp_kavach/adapters/: fastmcp_middleware.py  proxy.py
src/mcp_kavach/cli/: __init__.py  audit.py  main.py
src/mcp_kavach/detectors/: __init__.py  base.py  checksums.py  entities.py  ner.py  normalize.py  regex.py  secrets.py  structural.py
src/mcp_kavach/hooks/: config.py  prompt_guard.py  runner.py  state.py  summary.py  tool_input.py  tool_output.py
src/mcp_kavach/policies/: dpdp.yaml  gdpr.yaml  hipaa-lite.yaml  ngo-default.yaml  personal.yaml  strict.yaml
src/mcp_kavach/policy/: __init__.py  loader.py  schema.py
src/mcp_kavach/transform/: __init__.py  transformer.py
src/mcp_kavach/vault/: __init__.py  store.py
src/virelia/: __init__.py  audit.py  engine.py  models.py  pathmatch.py
src/virelia/adapters/: __init__.py  fastmcp_middleware.py  proxy.py
src/virelia/cli/: __init__.py  audit.py  main.py
src/virelia/detectors/: __init__.py  base.py  entities.py  ner.py  regex.py  secrets.py  structural.py
src/virelia/hooks/: __init__.py  config.py  prompt_guard.py  runner.py  state.py  summary.py  tool_input.py  tool_output.py
src/virelia/policies/: dev.yaml  gdpr.yaml  hipaa-lite.yaml  personal.yaml
src/virelia/policy/: __init__.py  loader.py  schema.py
src/virelia/transform/: __init__.py  transformer.py
src/virelia/vault/: __init__.py  store.py
tests/: conftest.py  test_audit.py  test_checksums.py  test_corpus.py  test_detectors.py  test_engine.py  test_fastmcp_adapter.py  test_hook_units.py  test_hooks.py  test_monitor.py  test_multilingual.py  test_ner.py  test_ner_integration.py  test_pathmatch.py  test_policy.py  test_transformer.py  test_vault.py
tests/fixtures/corpus/: beneficiaries.json  multilingual.json  secrets.json
