[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-kavach"
version = "0.1.0"
description = "Privacy guardrail layer for MCP tool traffic — detect PII, apply declarative policies, mask/block/audit. India-first (DPDP), fully open source."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Project Tech4Dev", email = "dalgo-engineering@projecttech4dev.org" }]
keywords = ["mcp", "privacy", "pii", "guardrail", "redaction", "dpdp", "aadhaar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Reserved for future milestones — kept empty so the roadmap is visible in metadata.
# All future dependencies must be permissively-licensed open source (see CONTRIBUTING.md).
ner = []
llm = []
otel = []
proxy = []

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_kavach"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
