[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "virelia"
version = "0.2.0"
description = "Privacy guardrail layer for MCP tool traffic — detect PII, apply declarative policies, mask/block/audit. India-first (DPDP), fully open source."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Project Tech4Dev", email = "dalgo-engineering@projecttech4dev.org" }]
keywords = ["mcp", "privacy", "pii", "guardrail", "redaction", "dpdp", "aadhaar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.scripts]
virelia = "virelia.cli.main:main"

[project.optional-dependencies]
# Reserved extras (llm, otel) stay empty so the roadmap is visible in metadata.
# All dependencies must be permissively-licensed open source (see CONTRIBUTING.md).
# The [ner] extra also needs a spaCy model: python -m spacy download en_core_web_sm
ner = ["presidio-analyzer>=2.2,<3", "spacy>=3.7,<4"]
llm = []
otel = []
proxy = ["fastmcp>=3,<4"]
postgres = ["psycopg>=3.1"]
# Tokenization vault: Fernet (authenticated encryption) for values at rest.
# Apache-2.0/BSD dual-licensed; behind an extra so the base install stays light.
vault = ["cryptography>=42"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "fastmcp>=3,<4",
    "cryptography>=42",
]

[tool.hatch.build.targets.wheel]
packages = ["src/virelia"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
